# pdf-gpt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  use_pdf_gpt.ipynb
.github/: CODEOWNER  PULL_REQUEST_TEMPLATE.md
pdf_gpt/: pdf_bot.py  pdf_document.py  search_engine.py
tests/: test_search_engine.py
